This disallows printing or print preview to work if the document is busy. Meaning it might be still loading or unloading. Bug 131174 r=dcone a=attinasi a=dbaron